[package]
name = "varint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beep = "0.3.0"
bincode = "1.3.3"
fancy-regex = "0.13.0"
itertools = "0.12.1"
serde = { version = "1.0.203", features = ["derive"] }
termios = "0.3.3"
win-beep = "1.0.3"
